// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkScrollableCalendar should render correctly 1`] = `
<div
  className="bpk-calendar bpk-calendar--fixed"
>
  <header
    className="bpk-calendar-header"
  >
    <ol
      className="bpk-calendar-header__week"
    >
      <li
        className="bpk-calendar-header__weekday"
        title="Monday"
      >
        <span
          aria-hidden="true"
        >
          Mon
        </span>
      </li>
      <li
        className="bpk-calendar-header__weekday"
        title="Tuesday"
      >
        <span
          aria-hidden="true"
        >
          Tue
        </span>
      </li>
      <li
        className="bpk-calendar-header__weekday"
        title="Wednesday"
      >
        <span
          aria-hidden="true"
        >
          Wed
        </span>
      </li>
      <li
        className="bpk-calendar-header__weekday"
        title="Thursday"
      >
        <span
          aria-hidden="true"
        >
          Thu
        </span>
      </li>
      <li
        className="bpk-calendar-header__weekday"
        title="Friday"
      >
        <span
          aria-hidden="true"
        >
          Fri
        </span>
      </li>
      <li
        className="bpk-calendar-header__weekday bpk-calendar-header__weekday--weekend bpk-calendar-header__weekday--weekend-start"
        title="Saturday"
      >
        <span
          aria-hidden="true"
        >
          Sat
        </span>
      </li>
      <li
        className="bpk-calendar-header__weekday bpk-calendar-header__weekday--weekend bpk-calendar-header__weekday--weekend-end"
        title="Sunday"
      >
        <span
          aria-hidden="true"
        >
          Sun
        </span>
      </li>
    </ol>
  </header>
  <div
    className="bpk-scrollable-calendar-grid-list"
  >
    <div
      className="bpk-scrollable-calendar-grid-list__strip"
    >
      <div
        className={undefined}
        style={
          Object {
            "height": 0,
            "overflow": "visible",
            "width": 0,
          }
        }
      >
        <div
          aria-label="grid"
          aria-readonly={true}
          className="ReactVirtualized__Grid ReactVirtualized__List"
          id={undefined}
          onScroll={[Function]}
          role="grid"
          style={
            Object {
              "WebkitOverflowScrolling": "touch",
              "boxSizing": "border-box",
              "direction": "ltr",
              "height": 0,
              "overflowX": "hidden",
              "overflowY": "auto",
              "position": "relative",
              "width": 0,
              "willChange": "transform",
            }
          }
          tabIndex={0}
        />
      </div>
       
    </div>
  </div>
</div>
`;

exports[`BpkScrollableCalendar should support arbitrary props 1`] = `
<div
  className="bpk-calendar bpk-calendar--fixed"
>
  <header
    className="bpk-calendar-header"
  >
    <ol
      className="bpk-calendar-header__week"
    >
      <li
        className="bpk-calendar-header__weekday"
        title="Monday"
      >
        <span
          aria-hidden="true"
        >
          Mon
        </span>
      </li>
      <li
        className="bpk-calendar-header__weekday"
        title="Tuesday"
      >
        <span
          aria-hidden="true"
        >
          Tue
        </span>
      </li>
      <li
        className="bpk-calendar-header__weekday"
        title="Wednesday"
      >
        <span
          aria-hidden="true"
        >
          Wed
        </span>
      </li>
      <li
        className="bpk-calendar-header__weekday"
        title="Thursday"
      >
        <span
          aria-hidden="true"
        >
          Thu
        </span>
      </li>
      <li
        className="bpk-calendar-header__weekday"
        title="Friday"
      >
        <span
          aria-hidden="true"
        >
          Fri
        </span>
      </li>
      <li
        className="bpk-calendar-header__weekday bpk-calendar-header__weekday--weekend bpk-calendar-header__weekday--weekend-start"
        title="Saturday"
      >
        <span
          aria-hidden="true"
        >
          Sat
        </span>
      </li>
      <li
        className="bpk-calendar-header__weekday bpk-calendar-header__weekday--weekend bpk-calendar-header__weekday--weekend-end"
        title="Sunday"
      >
        <span
          aria-hidden="true"
        >
          Sun
        </span>
      </li>
    </ol>
  </header>
  <div
    className="bpk-scrollable-calendar-grid-list"
  >
    <div
      className="bpk-scrollable-calendar-grid-list__strip"
    >
      <div
        className={undefined}
        style={
          Object {
            "height": 0,
            "overflow": "visible",
            "width": 0,
          }
        }
      >
        <div
          aria-label="grid"
          aria-readonly={true}
          className="ReactVirtualized__Grid ReactVirtualized__List"
          id={undefined}
          onScroll={[Function]}
          role="grid"
          style={
            Object {
              "WebkitOverflowScrolling": "touch",
              "boxSizing": "border-box",
              "direction": "ltr",
              "height": 0,
              "overflowX": "hidden",
              "overflowY": "auto",
              "position": "relative",
              "width": 0,
              "willChange": "transform",
            }
          }
          tabIndex={0}
        />
      </div>
       
    </div>
  </div>
</div>
`;

exports[`BpkScrollableCalendar should support custom class names 1`] = `
<div
  className="bpk-calendar custom-classname bpk-calendar--fixed"
>
  <header
    className="bpk-calendar-header"
  >
    <ol
      className="bpk-calendar-header__week"
    >
      <li
        className="bpk-calendar-header__weekday"
        title="Monday"
      >
        <span
          aria-hidden="true"
        >
          Mon
        </span>
      </li>
      <li
        className="bpk-calendar-header__weekday"
        title="Tuesday"
      >
        <span
          aria-hidden="true"
        >
          Tue
        </span>
      </li>
      <li
        className="bpk-calendar-header__weekday"
        title="Wednesday"
      >
        <span
          aria-hidden="true"
        >
          Wed
        </span>
      </li>
      <li
        className="bpk-calendar-header__weekday"
        title="Thursday"
      >
        <span
          aria-hidden="true"
        >
          Thu
        </span>
      </li>
      <li
        className="bpk-calendar-header__weekday"
        title="Friday"
      >
        <span
          aria-hidden="true"
        >
          Fri
        </span>
      </li>
      <li
        className="bpk-calendar-header__weekday bpk-calendar-header__weekday--weekend bpk-calendar-header__weekday--weekend-start"
        title="Saturday"
      >
        <span
          aria-hidden="true"
        >
          Sat
        </span>
      </li>
      <li
        className="bpk-calendar-header__weekday bpk-calendar-header__weekday--weekend bpk-calendar-header__weekday--weekend-end"
        title="Sunday"
      >
        <span
          aria-hidden="true"
        >
          Sun
        </span>
      </li>
    </ol>
  </header>
  <div
    className="bpk-scrollable-calendar-grid-list"
  >
    <div
      className="bpk-scrollable-calendar-grid-list__strip"
    >
      <div
        className={undefined}
        style={
          Object {
            "height": 0,
            "overflow": "visible",
            "width": 0,
          }
        }
      >
        <div
          aria-label="grid"
          aria-readonly={true}
          className="ReactVirtualized__Grid ReactVirtualized__List"
          id={undefined}
          onScroll={[Function]}
          role="grid"
          style={
            Object {
              "WebkitOverflowScrolling": "touch",
              "boxSizing": "border-box",
              "direction": "ltr",
              "height": 0,
              "overflowX": "hidden",
              "overflowY": "auto",
              "position": "relative",
              "width": 0,
              "willChange": "transform",
            }
          }
          tabIndex={0}
        />
      </div>
       
    </div>
  </div>
</div>
`;
